src/objects/Competition__c.object
<CustomObject>
    <description>This object is a central hub to track all the key information about your competitors</description>
    <fields>
        <fullName>CEO__c</fullName>
        <description>Noms du chef de la direction</description>
        <inlineHelpText>Noms du chef de la direction</inlineHelpText>
        <label>CEO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Champs_de_pratique__c</fullName>
        <description>les différents champs de pratique que le concurrent offre à la clientèle</description>
        <inlineHelpText>Choisir tous les champs de pratique qui s&apos;appliquent</inlineHelpText>
        <label>Champs de pratique</label>
        <picklist>
            <picklistValues>
                <fullName>Reconstruction d&apos;accidents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chimie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil enveloppe du bâtiment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil gestion de projets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil stucture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conformité de bâtiments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Électricitié</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environnemnt air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environnement produits pétrolier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environnment eau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incendies et explosions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protection Incendies explosions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matériaux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mécanique du bâtiment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mécanique industrielle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mécanique véhicule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chimie des polymères</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Logo__c</fullName>
        <label>Competitor logo</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competitor_Weaknesses__c</fullName>
        <description>Les faiblesses stratégiques de ce concurrent</description>
        <inlineHelpText>Les faiblesses stratégiques de ce concurrent</inlineHelpText>
        <label>Competitor Weakness</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Competition</relationshipLabel>
        <relationshipName>Competition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Experts_Names__c</fullName>
        <description>Names of experts, select from this list to identify the experts on the firm. If a name is not available please inform JF Joubert</description>
        <label>Experts Names</label>
        <picklist>
            <picklistValues>
                <fullName>Alain Thériault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bernard Pelletier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bruno Boulanger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carl Leblanc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charles Poupart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christian Caron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claude Létourneau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denis Saucier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Etienne Lemire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frederic Charest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fred J.  Ablenas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaetan Beaumont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaetan Dupuis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>James Wheeler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jason Montambeault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jean-Claude Bégin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jean René Dumont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laurent Arsenault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luc Germain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marc-André Langevin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael Rowen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michel Pitre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normand Juneau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paul André Roy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raymond Chokelal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>René Chamberland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serge Jodoin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simon Blais</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Notes_competition__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Our_Advantages__c</fullName>
        <description>Les avantages que nous démontrons vis à vis ce concurrent</description>
        <inlineHelpText>Les avantages que nous démontrons vis à vis ce concurrent</inlineHelpText>
        <label>Our advantages</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Région</label>
        <picklist>
            <picklistValues>
                <fullName>Québec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ottawa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toronto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burlington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maritimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Selling_Tips__c</fullName>
        <description>les trucs contre ce concurrent</description>
        <inlineHelpText>les trucs contre ce concurrent</inlineHelpText>
        <label>Selling tips</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Site_web__c</fullName>
        <label>Site web</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ticker_Symbol__c</fullName>
        <description>Stock Ticker Symbol</description>
        <inlineHelpText>Stock Ticker Symbol</inlineHelpText>
        <label>Ticker Symbol</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Founded__c</fullName>
        <description>The Year the Company was Founded</description>
        <inlineHelpText>The Year the Company was Founded</inlineHelpText>
        <label>Year founded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <label>Competition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Site_web__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>